# jotoba

./: Cargo.toml
src/: example.rs  lib.rs
src/parser/: mod.rs  reading.pest
src/types/: dialect.rs  field.rs  kanji.rs  language.rs  misc.rs  mod.rs  part_of_speech.rs  word.rs  words.rs
