[package]
name = "jotoba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "test"
path = "src/example.rs"

[dependencies]
anyhow = "1.0.75"
pest = "2.7.5"
pest_derive = "2.7.5"
reqwest = { version = "0.11.22", features = ["serde_json", "json"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
